Fixes z-index for tooltips

--- a/src/assets/z-indexes.styl
+++ b/src/assets/z-indexes.styl
@@ -17,9 +17,12 @@ nav
 .modal
   z-index: $freshchat-z-index + 4
 
+.tooltip
+  z-index: $freshchat-z-index + 5
+
 // toasts should be above modals since we need to see errors inside of modals
 .toast-container
-  z-index: $freshchat-z-index + 5
+  z-index: $freshchat-z-index + 6
 
 // the cookie banner should show above everything
 .cookie
